--- a/assets/css/meyawo.css
+++ b/assets/css/meyawo.css
@@ -12048,7 +12048,7 @@ pre .code {
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-image: url(../imgs/header.jpg);
+  background-image: url(../imgs/header.gif);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
